--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,105 @@
-h1 {
-  color: red;
+body {
+  background: #f9f7fe;
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  color: #885df1;
+}
+
+.weather-app {
+  background: white;
+  max-width: 750px;
+  margin: 50px auto;
+  padding: 35px;
+  border-radius: 16px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+}
+
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding-bottom: 40px;
+}
+
+.search-input {
+  background-color: #f9f7fe;
+  border: none;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 20px;
+  padding: 20px;
+  width: 75%;
+  border-radius: 6px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.search-button {
+  margin-left: 5px;
+  font-size: 20px;
+  background-color: #885df1;
+  color: white;
+  border: none;
+  padding: 20px 57px;
+  line-height: 1;
+  border-radius: 6px;
+}
+
+main {
+  padding: 30px 0;
+}
+
+#current-temperature {
+  display: flex;
+}
+
+.current-temperature {
+  font-size: 48px;
+}
+
+.current-weather {
+  display: flex;
+  justify-content: space-between;
+}
+
+.current-city {
+  font-size: 46px;
+  font-weight: 600;
+  margin: 0;
+}
+.current-details {
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.current-details strong {
+  color: #f65282;
+}
+
+.current-temperature-icon {
+  position: flex;
+  top: -8px;
+  font-size: 40px;
+  margin-right: 10px;
+}
+
+.current-temperature-value {
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.current-temperature-unit {
+  font-size: 28px;
+  position: relative;
+  top: 16px;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  text-align: center;
+  padding-top: 15px;
+
+  color: rgba(39, 33, 66, 0.4);
 }
