--- a/src/styles.css
+++ b/src/styles.css
@@ -103,3 +103,31 @@ footer {
 
   color: rgba(39, 33, 66, 0.4);
 }
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.weather-forecast-icon {
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.weather-forecast-temperatures {
+  display: flex;
+  margin-top: 10px;
+  color: #f65282;
+}
+
+.weather-forecast-temperature {
+  margin: 0px 10px;
+}
